--- a/src/views/constructor.ejs
+++ b/src/views/constructor.ejs
@@ -39,9 +39,7 @@
 			</div>
 
 			<div class="builder-container row">
-				<div class="sidebar">
-					<div class="sidebar-header">Add a component:</div>
-				</div>
+				<div class="sidebar"></div>
 
 				<div class="preview-container container-fluid">
 					<div class="preview">
