--- a/src/public/js/constructor.ejs
+++ b/src/public/js/constructor.ejs
@@ -13,6 +13,13 @@
 			icon: 'fa-solid fa-chevron-down',
 			description: 'Add footer',
 			html: `<%- include('../../partials/footer.ejs'); %>`
+		},
+		{
+			id: 3,
+			name: 'Server Card',
+			icon: 'fa-solid fa-server',
+			description: 'Add server card',
+			html: `<%- include('../../partials/serverCard.ejs'); %>`
 		}
 	];
 
