--- a/src/public/js/constructor.ejs
+++ b/src/public/js/constructor.ejs
@@ -20,6 +20,13 @@
 			icon: 'fa-solid fa-server',
 			description: 'Add server card',
 			html: `<%- include('../../partials/serverCard.ejs'); %>`
+		},
+		{
+			id: 4,
+			name: 'User Card',
+			icon: 'fa-solid fa-user',
+			description: 'Add user card',
+			html: `<%- include('../../partials/user-profile.ejs'); %>`
 		}
 	];
 
