Add page constructor

--- a/src/partials/footer.ejs
+++ b/src/partials/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="text-center text-lg-start text-muted">
+<footer class="text-center text-lg-start text-muted" idElem="2">
 	<section
 		class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom"
 	>
