--- a/src/partials/header.ejs
+++ b/src/partials/header.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg bg-body-tertiary" idElem="1">
 	<div class="container-fluid">
 		<%- include('./modules/headerLogo.ejs'); %>
 		<button
