--- a/src/partials/main-slides.ejs
+++ b/src/partials/main-slides.ejs
@@ -1,6 +1,7 @@
 <div
 	class="container-fluid d-flex justify-content-center"
 	style="padding-bottom: 50px"
+	idElem="5"
 >
 	<div
 		id="carouselExampleIndicators"
