--- a/src/partials/serverCard.ejs
+++ b/src/partials/serverCard.ejs
@@ -1,4 +1,4 @@
-<center>
+<center idElem="3">
 	<div class="col-md-6 container">
 		<div class="card mb-3">
 			<div class="row no-gutters align-items-center">
