--- a/src/partials/user-profile.ejs
+++ b/src/partials/user-profile.ejs
@@ -1,19 +1,23 @@
-<center>
-  <div class="container text-center" style="max-width: 30%">
-    <div class="card">
-      <img src="<%= avatar %>" class="card-img-top" alt="Profile Picture" />
-      <div class="card-body">
-        <h5 class="card-title"><%= userName %></h5>
-      </div>
-      <ul class="list-group list-group-flush">
-        <li class="list-group-item">
-          Steam: <a href="<%= steamLink %>">@<%= userName %></a>
-        </li>
-      </ul>
-    </div>
-  </div>
-  <div class="col-md-8">
-    <!-- <div class="card-body">
+<center idElem="4">
+	<div class="container text-center" style="max-width: 30%">
+		<div class="card">
+			<img
+				src="<%= avatar %>"
+				class="card-img-top"
+				alt="Profile Picture"
+			/>
+			<div class="card-body">
+				<h5 class="card-title"><%= userName %></h5>
+			</div>
+			<ul class="list-group list-group-flush">
+				<li class="list-group-item">
+					Steam: <a href="<%= steamLink %>">@<%= userName %></a>
+				</li>
+			</ul>
+		</div>
+	</div>
+	<div class="col-md-8">
+		<!-- <div class="card-body">
           <h5 class="card-title">Обо мне</h5>
           <p class="card-text">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eget
@@ -25,5 +29,5 @@
             sapien pulvinar suscipit.
           </p>
         </div> -->
-  </div>
+	</div>
 </center>
