--- a/src/partials/main-slides.ejs
+++ b/src/partials/main-slides.ejs
@@ -32,7 +32,7 @@
 			></button>
 		</div>
 		<div class="carousel-inner">
-			<a href="/shop">
+			<a href="/">
 				<div class="carousel-item active rounded">
 					<img
 						src="<%= slide_1 %>"
@@ -40,10 +40,18 @@
 						alt="..."
 					/></div
 			></a>
-			<a href="/tickets">
+			<a href="/">
 				<div class="carousel-item rounded">
 					<img
 						src="<%= slide_2 %>"
+						class="d-block w-100"
+						alt="..."
+					/></div
+			></a>
+			<a href="/">
+				<div class="carousel-item rounded">
+					<img
+						src="<%= slide_3 %>"
 						class="d-block w-100"
 						alt="..."
 					/></div
