--- a/src/partials/serverCard.ejs
+++ b/src/partials/serverCard.ejs
@@ -4,7 +4,7 @@
 			<div class="row no-gutters align-items-center">
 				<div class="col-md-4">
 					<img
-						src="https://dummyimage.com/400x300/000/fff&text=This+is+server"
+						src="https://placeholder.zachey.space/p/400x300"
 						class="card-img server-map-img"
 						alt="..."
 					/>
